# novelist-agent-loop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
server/: pyproject.toml
server/app/: main.py
server/app/api/: admin.py  auth.py  deps.py  reader.py
server/app/core/: config.py  events.py  security.py
server/app/db/: database.py  models.py  seed.py
server/app/pipeline/: __init__.py  context.py  engine.py  jsonutil.py  length.py  llm.py  prompts.py
server/app/pipeline/stages/: __init__.py  cover.py  finalize.py  planning.py  writing.py
server/app/providers/: base.py  embeddings.py  images.py  llm.py  mock.py  registry.py
server/app/scheduler/: __init__.py  ratelimit.py  scheduler.py
server/app/services/: epub.py  novels.py
server/scripts/: sqlite_to_pg.py
server/tests/: conftest.py  test_cover.py  test_pipeline_mock.py  test_scheduler.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  components.tsx  main.tsx  styles.css  types.ts
web/src/admin/: AdminLayout.tsx  Dashboard.tsx  Jobs.tsx  Novels.tsx  Profiles.tsx  Readers.tsx  SettingsPage.tsx  Themes.tsx
web/src/pages/: BookDetail.tsx  Library.tsx  Login.tsx  Reader.tsx
